...
        android:ems="10"
        android:hint="Address"
        app:layout_constraintTop_toBottomOf="@+id/primaryBusiness"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:onClick="submitInfoButton"
...
